--- a/styles.css
+++ b/styles.css
@@ -72,8 +72,51 @@
     display: none;
 }
 
+/* Hero Section */
+.hero{
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+}
+.child-image{
+    margin-right: 202.5px;
+}
+.hero-information{
+    margin-left: 186px;
+    width: 800px;
+    height: 370px;
+}
+.hero-title{
+    width: 640px;
+    height: 183px;
+    font-size: 3.5rem;
+    font-weight: 700;
+    margin-top: 2px;
+}
+.orange{
+    color: rgb(254, 163, 1);
+}
+.blue{
+    color: rgb(1, 172, 253);
+}
+.hero-description{
+    font-size: 1.25rem;
+    font-weight: 400;
+    
+}
+.enroll{
+    border-radius: 12px;
+    background: rgb(17, 17, 17);
+    width: 200px;
+    height: 50px;
+    /* Font */
+    color: rgb(255, 255, 255);
+    font-weight: 700;
+    font-size: 1.25rem;
+}
 /* Responsive Design */
 @media screen and (max-width:576px) {
+    /* Navbar */
     .logo{
         margin: 0px 10px;
     }
@@ -91,7 +134,41 @@
     }
     .icon{
         display: block;
-        margin: 0px 10px;
+        margin-right: 20px;
+    }
+
+    /* Hero Section */
+    .hero{
+        flex-direction: column;
+        text-align: center;
+        max-width: 357px;
+        margin: 0px auto;
+    
+    }
+    .child-image img{
+        max-width: 357px;
+        margin-left: 200px;
+    }
+    .hero-information{
+        max-width: 300px;
+        max-height: 250px;
+        margin-right: 180px;
+    }
+    .hero-title{
+        max-width: 300px;
+        max-height: 120px;
+        font-size: 1.9rem;
+    }
+    .hero-description{
+        max-width: 300px;
+        height: 50px;
+        padding-left: 8px;
+        font-size: 0.8rem;
+    }
+    .enroll{
+        font-size: 0.9rem;
+        width: 110px;
+        height: 38px;
     }
 }
 
