--- a/styles.css
+++ b/styles.css
@@ -114,6 +114,85 @@
     font-weight: 700;
     font-size: 1.25rem;
 }
+
+/* Curriculum */
+.curriculum{
+    text-align: center;
+    background-image: url(assets/bg.png);
+}
+.curriculum-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+    margin-top: 60px;
+    margin-bottom: 80px;
+}
+.divisions{
+    margin-left:186px;
+    margin-right: 186px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 50px;
+}
+.division-1{
+    width: 467.8px;
+    height: 476.78px;
+    box-sizing: border-box;
+    border: 0.94px solid rgb(222, 245, 255);
+    border-radius: 18.86px;
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(180.00deg, rgb(222, 245, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+    padding: 100px 0px;
+}
+
+.division-2{
+    padding: 100px 0px;
+    width: 467.8px;
+    height: 476.78px;
+    box-sizing: border-box;
+    border: 0.94px solid rgb(255, 244, 220);
+    border-radius: 18.86px;
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(180.00deg, rgb(255, 244, 220),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+}
+.division-3{
+    padding: 100px 0px;
+    width: 467.8px;
+    height: 476.78px;
+    box-sizing: border-box;
+    border: 0.94px solid rgb(242, 232, 255);
+    border-radius: 18.86px;
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(180.00deg, rgb(238, 225, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+}
+.division-name{
+    margin: 30px auto;
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+.division-description{
+    margin: 30px auto;
+    font-size: 0.9rem;
+    font-weight: 500;
+}
+.division-details1{
+    margin: 30px auto;
+    font-size: 0.9rem;
+    font-weight: 700;
+    color: rgb(100, 200, 255);
+}
+.division-details2{
+    margin: 30px auto;
+    font-size: 0.9rem;
+    font-weight: 700;
+    color: rgb(240, 170, 0);
+}
+.division-details3{
+    margin: 30px auto;
+    font-size: 0.9rem;
+    font-weight: 700;
+    color: rgb(135, 0, 255);
+}
 /* Responsive Design */
 @media screen and (max-width:576px) {
     /* Navbar */
@@ -169,6 +248,23 @@
         font-size: 0.9rem;
         width: 110px;
         height: 38px;
+    }
+
+    /* Curriculum */
+    .divisions{
+        flex-direction: column;
+    }
+    .curriculum-title{
+        font-size: 2rem;
+    }
+    .division-1{
+        max-width: 300px;
+    }
+    .division-2{
+        max-width: 300px;
+    }
+    .division-3{
+        max-width: 300px;
     }
 }
 
