--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@
 }
 .display-flex{
     display: flex;
+
+}
+.display-grid{
+    display: grid;
 }
 
 /* Navbar */
@@ -142,11 +146,11 @@
     border-radius: 18.86px;
     box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
     background: linear-gradient(180.00deg, rgb(222, 245, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
-    padding: 100px 0px;
+    padding: 50px 0px;
 }
 
 .division-2{
-    padding: 100px 0px;
+    padding: 50px 0px;
     width: 467.8px;
     height: 476.78px;
     box-sizing: border-box;
@@ -156,7 +160,7 @@
     background: linear-gradient(180.00deg, rgb(255, 244, 220),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
 }
 .division-3{
-    padding: 100px 0px;
+    padding: 50px 0px;
     width: 467.8px;
     height: 476.78px;
     box-sizing: border-box;
@@ -165,15 +169,33 @@
     box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
     background: linear-gradient(180.00deg, rgb(238, 225, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
 }
+.division-1 img{
+    width: 176px;
+    height: 176px;
+}
+.division-2 img{
+    width: 176px;
+    height: 176px;
+}
+.division-3 img{
+    width: 176px;
+    height: 176px;
+}
 .division-name{
+    width: 231px;
+    height: 30px;
     margin: 30px auto;
     font-size: 1.5rem;
     font-weight: 700;
+
 }
 .division-description{
+    width: 286px;
+    height: 74px;
     margin: 30px auto;
     font-size: 0.9rem;
     font-weight: 500;
+    overflow: hidden;
 }
 .division-details1{
     margin: 30px auto;
@@ -223,6 +245,12 @@
 /* Responsive Design */
 @media screen and (max-width:576px) {
     /* Navbar */
+    .navigation-bar{
+        display: flex;
+    }
+    .display-flex{
+        flex-wrap: nowrap;
+    }
     .logo{
         margin: 0px 10px;
     }
@@ -245,6 +273,7 @@
 
     /* Hero Section */
     .hero{
+        display: flex;
         flex-direction: column;
         text-align: center;
         max-width: 357px;
